lecture 5 complete. Learn how to store component states and render it.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     </div>
     <script type="text/babel">
         class App extends React.Component{
+            state = {
+                name: 'KIM',
+                age: 25
+            }
             render(){
                 return (
                     <div className="app-content">
                         <h1>Hey, youngjuice!</h1>
-                        <p>{Math.random()*10}</p>
+                        <p>My name is: {this.state.name} and I am {this.state.age}</p>
                     </div>
 
                 )
