--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
                 age: 25
             }
             handleClick(e){
-                console.log(e.target);
+                //console.log(e.target);
+                conlsole.log(e);
+            }
+            handleMouseOver(e){
+                console.log(e);
+            }
+            handleCopy(e){
+                console.log('try being original for once!')
             }
             render(){
                 return (
@@ -29,6 +36,8 @@
                         <h1>Hey, youngjuice!</h1>
                         <p>My name is: {this.state.name} and I am {this.state.age}</p>
                         <button onClick={this.handleClick}>Click Me</button>
+                        <button onMouseOver={this.handleMouseOver}>Hover me</button>
+                        <p onCopy={this.handleCopy}>What we think, we become</p>
                     </div>
 
                 )
